Style GitHub blob
Ex: https://discourse.mozilla.org/t/inject-css-with-webextension/16877/3#post_3

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -125,6 +125,7 @@ url-prefix("https://www.sitepoint.com/community/") {
   .btn:hover,
   .cat:hover,
   .d-editor-spacer,
+  pre.onebox code li.selected,
   .topic-list .sortable:hover,
   .nav-pills > li > a:hover,
   .d-header-icons .icon:hover,
@@ -230,6 +231,7 @@ url-prefix("https://www.sitepoint.com/community/") {
   .topic-body,
   .topic-map section,
   .topic-list > tbody > tr,
+  pre.onebox code ol.lines li,
   .nav-pills > li > a,
   .category-list tbody tr,
   .small-action,
