--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -20,6 +20,7 @@ domain("discuss.elastic.co"),
 domain("discuss.howtogeek.com"),
 domain("forum.breadtopia.com"),
 domain("forum.freecodecamp.org"),
+domain("forum.glyphsapp.com"),
 domain("forum.ionicframework.com"),
 domain("forum.keyboardmaestro.com"),
 domain("forum.sublimetext.com"),
