Add Swift forums

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -29,6 +29,7 @@ domain("forum.vuejs.org"),
 domain("forums.docker.com"),
 domain("forums.habitat.sh"),
 domain("forums.meteor.com"),
+domain("forums.swift.org"),
 domain("forums.urbackup.org"),
 domain("internals.rust-lang.org"),
 domain("meta.discourse.org"),
