Add more sites. Closes #2

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -17,6 +17,7 @@ domain("community.letsencrypt.org"),
 domain("discuss.atom.io"),
 domain("discuss.codemirror.net"),
 domain("discuss.elastic.co"),
+domain("discuss.flexget.com"),
 domain("discuss.howtogeek.com"),
 domain("forum.breadtopia.com"),
 domain("forum.freecodecamp.org"),
@@ -29,6 +30,7 @@ domain("forum.vuejs.org"),
 domain("forums.docker.com"),
 domain("forums.habitat.sh"),
 domain("forums.meteor.com"),
+domain("forums.sonarr.tv"),
 domain("forums.swift.org"),
 domain("forums.urbackup.org"),
 domain("internals.rust-lang.org"),
