Fix sonarr.tv logo & banner. See #2

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -462,6 +462,26 @@ regexp("https?://discourse\.\S*") {
   }
 }
 
+@-moz-document domain("forums.sonarr.tv") {
+	.title img {
+    filter: invert(100%) !important;
+  }
+  .title a:before {
+    content: '';
+    background: url(https://sonarr.tv/img/logo.png) no-repeat;
+    background-size: cover;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  .banner {
+    background: #283045 !important;
+  }
+}
+
 @-moz-document url-prefix("https://www.sitepoint.com/community") {
   .logomark svg > rect {
     fill: #222 !important;
