Add syncthing & makeict forums

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -25,6 +25,7 @@ domain("forum.glyphsapp.com"),
 domain("forum.ionicframework.com"),
 domain("forum.keyboardmaestro.com"),
 domain("forum.sublimetext.com"),
+domain("forum.syncthing.net"),
 domain("forum.talksurf.com"),
 domain("forum.vuejs.org"),
 domain("forums.docker.com"),
@@ -37,6 +38,7 @@ domain("internals.rust-lang.org"),
 domain("meta.discourse.org"),
 domain("platform.github.community"),
 domain("talk.commonmark.org"),
+domain("talk.makeict.org"),
 domain("twittercommunity.com"),
 domain("users.rust-lang.org"),
 domain("zegist.com"),
