--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -24,6 +24,7 @@ domain("forum.freecodecamp.org"),
 domain("forum.glyphsapp.com"),
 domain("forum.ionicframework.com"),
 domain("forum.keyboardmaestro.com"),
+domain("forum.snapcraft.io"),
 domain("forum.sublimetext.com"),
 domain("forum.syncthing.net"),
 domain("forum.talksurf.com"),
