Fix regexp for users that install from userstyles.org

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -45,7 +45,7 @@ domain("twittercommunity.com"),
 domain("users.rust-lang.org"),
 domain("zegist.com"),
 url-prefix("https://www.sitepoint.com/community/"),
-regexp("https?://discourse\.\S*") {
+regexp("https?://discourse\\.\\S*") {
 
   :root {
     --main-color: /*[[main-color]]*/;
