--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -22,6 +22,7 @@ domain("discuss.flexget.com"),
 domain("discuss.howtogeek.com"),
 domain("forum.breadtopia.com"),
 domain("forum.freecodecamp.org"),
+domain("forum.gitlab.com"),
 domain("forum.glyphsapp.com"),
 domain("forum.ionicframework.com"),
 domain("forum.keyboardmaestro.com"),
@@ -234,6 +235,7 @@ regexp("https?://discourse\\.\\S*") {
   nav.post-controls button.create,
   .user-menu .notifications li span,
   .badge-wrapper.bullet span.badge-category,
+  .badge-wrapper.bar span.badge-category,
   .list-controls .category-dropdown-menu .home,
   .category-list tbody .category h3 a[href],
 
