Add education.github.community forums

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -20,6 +20,7 @@ domain("discuss.codemirror.net"),
 domain("discuss.elastic.co"),
 domain("discuss.flexget.com"),
 domain("discuss.howtogeek.com"),
+domain("education.github.community"),
 domain("forum.breadtopia.com"),
 domain("forum.freecodecamp.org"),
 domain("forum.gitlab.com"),
