Add Mattermost & Sponge forums
See https://forum.userstyles.org/discussion/68139/mattermost-sponge

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -27,7 +27,9 @@ domain("forum.gitlab.com"),
 domain("forum.glyphsapp.com"),
 domain("forum.ionicframework.com"),
 domain("forum.keyboardmaestro.com"),
+domain("forum.mattermost.org"),
 domain("forum.snapcraft.io"),
+domain("forums.spongepowered.org"),
 domain("forum.sublimetext.com"),
 domain("forum.syncthing.net"),
 domain("forum.talksurf.com"),
