--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -51,165 +51,94 @@ domain("users.rust-lang.org"),
 domain("zegist.com"),
 url-prefix("https://www.sitepoint.com/community/"),
 regexp("https?://discourse\\.\\S*") {
-
   :root {
     --main-color: /*[[main-color]]*/;
   }
-
   body {
     background: #181818 !important;
     color: #ddd !important;
   }
-
-  .d-header .panel,
-  .cat .dropdown-header,
-  .topic-body,
-  .topic-body.highlighted,
-  .docked .d-header .title-wrapper,
-  .badge-category-bg + .badge-category,
+  .d-header .panel, .cat .dropdown-header, .topic-body, .topic-body.highlighted,
+  .docked .d-header .title-wrapper, .badge-category-bg + .badge-category,
   .fa[style*="background"] {
     background: transparent !important;
   }
-
-  .d-header,
-  .badge-card .badge-icon {
+  .d-header, .badge-card .badge-icon {
     background: #111 !important;
   }
-
-  .primary,
-  #reply-control,
-  .bootbox.modal,
+  .primary, #reply-control, .bootbox.modal,
   .topic-list .topic-list-item-separator td span,
   .user-preferences .bio-composer .d-editor-preview,
-  .edit-category-tab-topic-template .d-editor-preview,
-  .about .details,
-  .user-main .about .secondary,
-  .badge-card {
+  .edit-category-tab-topic-template .d-editor-preview, .about .details,
+  .user-main .about .secondary, .badge-card {
     background: #181818 !important;
     border-color: #444 !important;
   }
-
-  code,
-  pre code,
-  p > code,
-  input,
-  .btn,
-  .message,
-  #reply-control input,
-  #reply-control textarea,
-  #reply-control select,
-  #reply-control .tag-chooser,
-  .badge-notification,
-  .modal-inner-container,
-  .select2-drop,
-  .select-kit-body,
-  .select-kit-header,
-  .select-box-kit-header,
-  .select-kit-collection,
-  .select-box-kit-collection,
-  .select-kit .select-kit-collection,
-  .select-kit-filter,
-  .select-box-kit-filter,
-  .d-editor-textarea-wrapper,
-  .user-preferences .bio-composer,
-  div.ac-wrap {
+  code, pre code, p > code, input, .btn, .message, #reply-control input,
+  #reply-control textarea, #reply-control select, #reply-control .tag-chooser,
+  .badge-notification, .modal-inner-container, .select2-drop, .select-kit-body,
+  .select-kit-header, .select-box-kit-header, .select-kit-collection,
+  .select-box-kit-collection, .select-kit .select-kit-collection,
+  .select-kit-filter, .select-box-kit-filter, .d-editor-textarea-wrapper,
+  .user-preferences .bio-composer, div.ac-wrap {
     background: #222 !important;
     color: #ddd !important;
     border-color: #444 !important;
   }
-
-  blockquote,
-  aside.quote > div,
-  aside.quote > blockquote,
-  a.mention,
-  a.mention-group,
-  .menu-panel,
-  .emoji-picker,
-  .composer-popup,
-  .d-editor .d-editor-modal,
-  .user-menu .notifications li.read,
+  blockquote, aside.quote > div, aside.quote > blockquote, a.mention,
+  a.mention-group, .menu-panel, .emoji-picker, .composer-popup,
+  .d-editor .d-editor-modal, .user-menu .notifications li.read,
   .topic-list > tbody > tr.topic-list-item,
-  .list-controls .category-dropdown-menu,
-  .select2-results .select2-no-results,
-  .select2-results .select2-searching,
-  .select2-results .select2-selection-limit,
+  .list-controls .category-dropdown-menu, .select2-results .select2-no-results,
+  .select2-results .select2-searching, .select2-results .select2-selection-limit,
   .details, .user-content, .topic-map,
   .drop-down-visible .d-header-icons .active .icon,
   .drop-down-visible .d-header .icons .active .icon,
-  .drop-down-mode .d-header-icons .active .icon,
-  .user-stream .item, .user-stream .user-stream-item {
+  .drop-down-mode .d-header-icons .active .icon, .user-stream .item,
+  .user-stream .user-stream-item {
     background: #222 !important;
     color: #aaa !important;
     border-color: #444 !important;
   }
-
-  .select2-drop-mask,
-  #list-area .contents .topic-list-item:nth-child(2n) {
+  .select2-drop-mask, #list-area .contents .topic-list-item:nth-child(2n) {
     background: rgba(34, 34, 34, .5) !important;
   }
-
-  li.select-box-kit-row,
-  .menu-panel .category-link:hover,
-  .menu-panel ul.menu-links li a:hover,
-  .menu-panel ul li.heading a:hover,
+  li.select-box-kit-row, .menu-panel .category-link:hover,
+  .menu-panel ul.menu-links li a:hover, .menu-panel ul li.heading a:hover,
   .badge-category {
     background-color: #333 !important;
   }
-
-  .placeholder-text,
-  .placeholder-avatar,
-  .topic-list > thead,
-  body .dropdown-header,
-  .topic-map .buttons .btn,
-  .badge-notification.clicks,
-  nav.post-controls button.d-hover,
-  .select2-results .select2-highlighted {
+  .placeholder-text, .placeholder-avatar, .topic-list > thead,
+  body .dropdown-header, .topic-map .buttons .btn, .badge-notification.clicks,
+  nav.post-controls button.d-hover, .select2-results .select2-highlighted {
     background: #333 !important;
     color: #aaa !important;
     border-color: #444 !important;
   }
-
-  .btn:hover,
-  .cat:hover,
-  .like-button:hover,
-  .d-editor-spacer,
-  pre.onebox code li.selected,
-  .topic-list .sortable:hover,
-  .nav-pills > li > a:hover,
-  .d-header-icons .icon:hover,
-  .d-header .icons .icon:hover,
-  .category-row.is-highlighted,
+  .btn:hover, .cat:hover, .like-button:hover, .d-editor-spacer,
+  pre.onebox code li.selected, .topic-list .sortable:hover,
+  .nav-pills > li > a:hover, .d-header-icons .icon:hover,
+  .d-header .icons .icon:hover, .category-row.is-highlighted,
   nav.post-controls .show-replies:hover,
   .drop-down-visible .d-header .icons .icon:hover,
   nav.post-controls .like-button:hover button.d-hover {
     background: #444 !important;
   }
-
   .emoji-picker .section-group button.emoji:hover,
   .emoji-picker .results button.emoji:hover {
     background-color: #444 !important;
   }
-
-  .user-preferences .static,
-  .discourse-tag.simple,
-  .discourse-tag.simple:hover,
-  .discourse-tag.simple:visited,
-  .modal.history-modal .diff-ins,
-  body .extra-info-wrapper .discourse-tag,
-  .d-header .icons .active .icon:hover,
+  .user-preferences .static, .discourse-tag.simple, .discourse-tag.simple:hover,
+  .discourse-tag.simple:visited, .modal.history-modal .diff-ins,
+  body .extra-info-wrapper .discourse-tag, .d-header .icons .active .icon:hover,
   .drop-down-visible .d-header .icons .active .icon:hover,
-  .stats-section li.linked-stat a,
-  .user-main .about .secondary dd,
+  .stats-section li.linked-stat a, .user-main .about .secondary dd,
   /* syntax theme */
-  .hljs-subst, .hljs-request, .hljs-status,
-  .hljs-keyword, .javascript .hljs-title, .nginx .hljs-title {
+  .hljs-subst, .hljs-request, .hljs-status, .hljs-keyword,
+  .javascript .hljs-title, .nginx .hljs-title {
     color: #aaa !important;
   }
-
-  input,
-  select,
-  textarea,
-  .fps-result .blurb .search-highlight,
+  input, select, textarea, .fps-result .blurb .search-highlight,
   .user-navigation .nav-stacked a.active,
   .topic-body .contents .cooked a:not(.mention):not(.mention-group),
   .topic-body .contents .cooked a:not(.mention):not(.mention-group):active,
@@ -221,264 +150,170 @@ regexp("https?://discourse\\.\\S*") {
   #reply-control .wmd-controls .d-editor-preview a:not(.mention):not(.mention-group):visited {
     color: #ccc; /* not important */
   }
-
-  .title,
-  .d-icon,
-  .alert,
-  #banner,
-  #site-text-logo,
-  .topic-count,
-  .alert.alert-info,
-  .alert.alert-success,
-  .alert.alert-error,
-  .nav-pills > li > a,
-  #topic-title h1 a,
-  .is-highlighted div,
-  .modal .modal-body p,
-  .atom-io-navigation a,
-  .composer-popup a.close,
-  .modal .modal-body label,
-  .topic-list .sortable:hover,
-  .extra-info-wrapper .topic-link,
-  nav.post-controls button.create,
-  .user-menu .notifications li span,
-  .like-button:hover .like-count.d-hover,
+  .title, .d-icon, .alert, #banner, #site-text-logo, .topic-count,
+  .alert.alert-info, .alert.alert-success, .alert.alert-error,
+  .nav-pills > li > a, #topic-title h1 a, .is-highlighted div,
+  .modal .modal-body p, .atom-io-navigation a, .composer-popup a.close,
+  .modal .modal-body label, .topic-list .sortable:hover,
+  .extra-info-wrapper .topic-link, nav.post-controls button.create,
+  .user-menu .notifications li span, .like-button:hover .like-count.d-hover,
   .badge-wrapper.bullet span.badge-category,
   .badge-wrapper.bar span.badge-category,
   .list-controls .category-dropdown-menu .home,
   .category-list tbody .category h3 a[href],
-
   /* Fix Mozilla Brazil category text color */
   .badge-category-bg[style*="background-color: #00683"] + span[style*="color: #000000"] {
     color: #ccc !important;
   }
-
   /* syntax theme */
-  .hljs-tag,
-  .hljs-tag .hljs-title,
-  .django .hljs-tag .hljs-keyword {
+  .hljs-tag, .hljs-tag .hljs-title, .django .hljs-tag .hljs-keyword {
     color: #777 !important;
   }
-
   .emoji-picker .diversity-picker .d-icon {
     color: #333 !important;
   }
-
-  .menu-panel,
-  .d-header .icons .icon,
-  ol.category-breadcrumb li,
+  .menu-panel, .d-header .icons .icon, ol.category-breadcrumb li,
   .drop-down-visible .d-header-icons .active .icon {
     border-color: transparent !important;
   }
-
   .drop-down-visible .d-header-icons .active .icon:after,
   .drop-down-visible .d-header .icons .active .icon:after,
   .drop-down-mode .d-header-icons .active .icon:after {
     border-color: #222 !important;
   }
-
-  hr,
-  input,
-  tbody,
-  .d-header,
-  .d-header .title,
-  .modal-header,
-  .modal-footer,
-  .topic-avatar,
-  .topic-status-info,
-  .topic-body,
-  .topic-map section,
-  .topic-list > tbody > tr,
-  pre.onebox code ol.lines li,
-  .nav-pills > li > a,
-  .category-list tbody tr,
-  .small-action,
-  .embedded-posts,
-  .select-kit-filter,
-  .select-box-kit-filter,
-  .d-editor-button-bar,
-  .table-heading,
-  #revision-details,
-  .emoji-picker .filter,
-  .emoji-picker .section-header,
-  .emoji-picker .categories-column,
-  .emoji-picker .footer,
-  .latest-topic-list-item,
-  .extra-info .badge-category,
-  .post-links-container .post-links,
-  .topic-list tr.topic-list-item td,
-  .topic-list > tbody,
-  .search-container .search-advanced .search-info {
+  hr, input, tbody, .d-header, .d-header .title, .modal-header, .modal-footer,
+  .topic-avatar, .topic-status-info, .topic-body, .topic-map section,
+  .topic-list > tbody > tr, pre.onebox code ol.lines li, .nav-pills > li > a,
+  .category-list tbody tr, .small-action, .embedded-posts, .select-kit-filter,
+  .select-box-kit-filter, .d-editor-button-bar, .table-heading,
+  #revision-details, .emoji-picker .filter, .emoji-picker .section-header,
+  .emoji-picker .categories-column, .emoji-picker .footer,
+  .latest-topic-list-item, .extra-info .badge-category,
+  .post-links-container .post-links, .topic-list tr.topic-list-item td,
+  .topic-list > tbody, .search-container .search-advanced .search-info {
     border-color: #444 !important;
   }
-
-  #reply-control,
-  .badge-category-bg,
-  .badge-category-parent-bg {
+  #reply-control, .badge-category-bg, .badge-category-parent-bg {
     border: #444 1px solid !important;
   }
-
   /* Advanced Search Bar*/
   .search-container .search-advanced-sidebar .search-advanced-filters {
-      background: #1d1d1d !important;
+    background: #1d1d1d !important;
   }
   .search-container .search-advanced-sidebar .search-advanced-title {
-      background: #2c2c2c !important;
+    background: #2c2c2c !important;
   }
-
-  #list-area .contents,
-  #list-area .contents .topic-list thead,
-  #list-area .contents .topic-list thead th,
-  .category-list, .topic-list:not(.categories),
-  .category-list .topics .badge-notification,
+  #list-area .contents, #list-area .contents .topic-list thead,
+  #list-area .contents .topic-list thead th, .category-list,
+  .topic-list:not(.categories), .category-list .topics .badge-notification,
   .category-list .category .badge-notification {
     background: transparent !important;
     border-color: #444 !important;
   }
-
   .topic-list > tbody > tr:first-of-type {
     border-top-color: #444 !important;
   }
-
   aside.onebox {
     border-color: rgba(68, 68, 68, .2) !important;
   }
-
   #list-area .contents .topic-list-item {
     border-bottom-color: transparent !important;
   }
-
   /* blue */
-  .btn-primary,
-  .open .grippie {
+  .btn-primary, .open .grippie {
     background-color: #182030 !important;
   }
-
-  #banner,
-  .btn-primary:hover,
-  .alert.alert-info {
+  #banner, .btn-primary:hover, .alert.alert-info {
     background-color: #273045 !important;
   }
-
-  .user-menu .notifications li,
-  .badge-notification.new-posts,
+  .user-menu .notifications li, .badge-notification.new-posts,
   .badge-notification.unread-posts {
     background-color: #303b55 !important;
   }
-
   .alert.alert-info.clickable {
     color: #9daccc;
   }
-
   /* green */
-  .alert.alert-success,
-  .modal.history-modal ins,
-  .modal.history-modal .diff-ins {
+  .alert.alert-success, .modal.history-modal ins, .modal.history-modal .diff-ins {
     background-color: #152 !important;
   }
-
-  .post-info .wiki,
-  .post-info .last-wiki-edit {
+  .post-info .wiki, .post-info .last-wiki-edit {
     color: #55a532 !important;
   }
-
   /* red */
-  .btn-danger,
-  .alert.alert-error,
-  .modal.history-modal del,
-  .modal.history-modal .diff-del,
-  nav.post-controls button.like.d-hover {
+  .btn-danger, .alert.alert-error, .modal.history-modal del,
+  .modal.history-modal .diff-del, nav.post-controls button.like.d-hover {
     background-color: #911 !important;
   }
-
-  .d-icon-d-liked,
-  nav.post-controls button.has-like,
+  .d-icon-d-liked, nav.post-controls button.has-like,
   nav.post-controls button.has-like .fa-heart,
   nav.post-controls button.has-like .fa-heart-o,
   nav.post-controls button.like.d-hover i {
     color: #f11 !important;
   }
-
   /* yellow */
-  .select2-results li em,
-  .modal.history-modal span.edit-reason,
+  .select2-results li em, .modal.history-modal span.edit-reason,
   .select-kit .select-kit-row.is-selected {
     background: #261d08 !important;
   }
-
   /* highlights */
   a, a:hover, a:active, a:visited,
   body #topic .topic-body .contents div.cooked a:not([class]) {
     color: var(--main-color); /* not important */
   }
-
-  .atom-io-navigation a:hover,
-  .topic-list .topic-list-item-separator td span,
+  .atom-io-navigation a:hover, .topic-list .topic-list-item-separator td span,
   .timeline-container .topic-timeline .timeline-last-read i.progress {
     color: var(--main-color) !important;
   }
-
-  .is-highlighted,
-   li.select-box-kit-row.is-highlighted,
-  .nav-pills > li.active > a,
-  .nav-pills > li > a.active,
+  .is-highlighted, li.select-box-kit-row.is-highlighted,
+  .nav-pills > li.active > a, .nav-pills > li > a.active,
   .timeline-container .btn-primary,
   .timeline-container .topic-timeline .timeline-handle,
   div.menu-links-header a:hover {
     background-color: var(--main-color) !important;
   }
-
-  .nav-pills > li.active > a,
-  .nav-pills > li > a.active,
+  .nav-pills > li.active > a, .nav-pills > li > a.active,
   .topic-list .topic-list-item-separator td,
   .timeline-container .topic-timeline .timeline-scrollarea,
   .badge-category:hover {
     border-color: var(--main-color) !important;
   }
-
   .d-header {
     box-shadow: none !important;
   }
-
   .topic-list .posters a:first-child .avatar.latest:not(.single) {
     box-shadow: 0 0 3px 1px var(--main-color) !important;
     border: 2px solid var(--main-color) !important;
   }
-
   ::selection {
     background-color: var(--main-color) !important;
     color: #fff !important;
   }
-
   ::-moz-selection {
     background-color: var(--main-color) !important;
     color: #fff !important;
   }
-
-  kbd,
-  #keyboard-shortcuts-help ul b,
-  img[src*="github.com/favicon.ico"] {
+  kbd, #keyboard-shortcuts-help ul b, img[src*="github.com/favicon.ico"] {
     filter: invert(80%) !important;
   }
-
   .badge-category-bg,
   a[data-user-card] img[src*="https://avatars.discourse.org"] {
     filter: brightness(75%) !important;
   }
-
   @keyframes background-fade-highlight {
-    0% { background-color: #333 !important; }
-    100% { background-color: transparent !important; }
+    0% {
+      background-color: #333 !important;
+    }
+    100% {
+      background-color: transparent !important;
+    }
   }
 }
-
 @-moz-document domain("discourse.mozilla.org") {
-  .badge-category-bg,
-  .badge-category-parent-bg {
+  .badge-category-bg, .badge-category-parent-bg {
     border: 0 !important;
   }
 }
-
 @-moz-document domain("discourse.roots.io") {
   div[style*="background: #ddf7e8"] {
     background: hsla(145, 62%, 10%, .33) !important;
@@ -487,16 +322,15 @@ regexp("https?://discourse\\.\\S*") {
     color: #ddd !important;
   }
 }
-
-@-moz-document domain("discourse.slicer.org"), domain("discuss.codemirror.net"), domain("discuss.elastic.co"), domain("meta.discourse.org") {
+@-moz-document domain("discourse.slicer.org"),
+domain("discuss.codemirror.net"),
+domain("discuss.elastic.co"),
+domain("meta.discourse.org") {
   .title img {
     --shadow: rgba(80, 80, 80, .3);
-    filter:
-      drop-shadow(1px 1px 1px var(--shadow)) drop-shadow(-1px 1px 1px var(--shadow))
-      drop-shadow(1px -1px 1px var(--shadow)) drop-shadow(-1px -1px 1px var(--shadow));
+    filter: drop-shadow(1px 1px 1px var(--shadow)) drop-shadow(-1px 1px 1px var(--shadow)) drop-shadow(1px -1px 1px var(--shadow)) drop-shadow(-1px -1px 1px var(--shadow));
   }
 }
-
 @-moz-document domain("forums.docker.com") {
   p {
     color: #ddd !important;
@@ -513,13 +347,14 @@ regexp("https?://discourse\\.\\S*") {
     border-color: #444 !important;
   }
 }
-
-@-moz-document domain("forums.urbackup.org"), domain("internals.rust-lang.org"), domain("talk.commonmark.org"), domain("users.rust-lang.org") {
+@-moz-document domain("forums.urbackup.org"),
+domain("internals.rust-lang.org"),
+domain("talk.commonmark.org"),
+domain("users.rust-lang.org") {
   .title img {
     filter: invert(80%) !important;
   }
 }
-
 @-moz-document domain("forums.sonarr.tv") {
   .title img {
     filter: invert(100%) !important;
@@ -539,7 +374,6 @@ regexp("https?://discourse\\.\\S*") {
     background: #283045 !important;
   }
 }
-
 @-moz-document url-prefix("https://www.sitepoint.com/community") {
   .logomark svg > rect {
     fill: #222 !important;
@@ -555,19 +389,13 @@ regexp("https?://discourse\\.\\S*") {
     color: #ccc !important;
   }
 }
-
 @-moz-document domain("twittercommunity.com") {
-  .Navigation.Navigation--global,
-  .NavigationItem-link,
-  .NavigationItem:after,
-  .Footer.Footer--global,
-  .NavigationItem.NavigationItem--main:after {
+  .Navigation.Navigation--global, .NavigationItem-link, .NavigationItem:after,
+  .Footer.Footer--global, .NavigationItem.NavigationItem--main:after {
     background: #302541 !important;
   }
-  .Navigation.Navigation--sub,
-  .Navigation--sub .NavigationItem-link,
-  .Navigation--sub .NavigationItem:after,
-  .NavigationItem.is-open:after,
+  .Navigation.Navigation--sub, .Navigation--sub .NavigationItem-link,
+  .Navigation--sub .NavigationItem:after, .NavigationItem.is-open:after,
   .NavigationItem.is-open>.NavigationItem-link,
   .NavigationItem[data-is-clickable="false"]:hover:after {
     background: #2e2e2e !important;
