TruOS: Invert logo. Closes #7

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -406,3 +406,9 @@ domain("users.rust-lang.org") {
     background: transparent !important;
   }
 }
+
+@-moz-document domain("discourse.trueos.org") {
+  #site-logo.logo-big {
+    filter: invert(100%) hue-rotate(180deg) brightness(.9) !important;
+  }
+}
