Add forum.f-driod.org. Closes #8

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -23,6 +23,7 @@ domain("discuss.flexget.com"),
 domain("discuss.howtogeek.com"),
 domain("education.github.community"),
 domain("forum.breadtopia.com"),
+domain("forum.f-droid.org"),
 domain("forum.freecodecamp.org"),
 domain("forum.gitlab.com"),
 domain("forum.glyphsapp.com"),
@@ -405,7 +406,8 @@ domain("users.rust-lang.org") {
     background: transparent !important;
   }
 }
-@-moz-document domain("discourse.trueos.org") {
+@-moz-document domain("discourse.trueos.org"),
+domain("forum.f-droid.org") {
   #site-logo.logo-big {
     filter: invert(100%) hue-rotate(180deg) brightness(.9) !important;
   }
