Add ubuntu-mate.community and reorder a few domains

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -22,6 +22,7 @@ domain("discuss.elastic.co"),
 domain("discuss.flexget.com"),
 domain("discuss.howtogeek.com"),
 domain("education.github.community"),
+domain("internals.rust-lang.org"),
 domain("forum.breadtopia.com"),
 domain("forum.f-droid.org"),
 domain("forum.freecodecamp.org"),
@@ -31,7 +32,6 @@ domain("forum.ionicframework.com"),
 domain("forum.keyboardmaestro.com"),
 domain("forum.mattermost.org"),
 domain("forum.snapcraft.io"),
-domain("forums.spongepowered.org"),
 domain("forum.sublimetext.com"),
 domain("forum.syncthing.net"),
 domain("forum.talksurf.com"),
@@ -40,14 +40,15 @@ domain("forums.docker.com"),
 domain("forums.habitat.sh"),
 domain("forums.meteor.com"),
 domain("forums.sonarr.tv"),
+domain("forums.spongepowered.org"),
 domain("forums.swift.org"),
 domain("forums.urbackup.org"),
-domain("internals.rust-lang.org"),
 domain("meta.discourse.org"),
 domain("platform.github.community"),
 domain("talk.commonmark.org"),
 domain("talk.makeict.org"),
 domain("twittercommunity.com"),
+domain("ubuntu-mate.community"),
 domain("users.rust-lang.org"),
 domain("zegist.com"),
 url-prefix("https://www.sitepoint.com/community/"),
