--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -16,6 +16,7 @@ domain("bbs.boingboing.net"),
 domain("community.bevoya.com"),
 domain("community.letsencrypt.org"),
 domain("community.home-assistant.io"),
+domain("community.thunkable.com"),
 domain("discuss.atom.io"),
 domain("discuss.codemirror.net"),
 domain("discuss.elastic.co"),
