--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -14,6 +14,7 @@
 @-moz-document domain("discourse.mozilla.org"),
 domain("bbs.boingboing.net"),
 domain("community.bevoya.com"),
+domain("community.bitwarden.com"),
 domain("community.cloudflare.com"),
 domain("community.letsencrypt.org"),
 domain("community.home-assistant.io"),
