Update freecodecamp forum url

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -29,7 +29,6 @@ domain("education.github.community"),
 domain("internals.rust-lang.org"),
 domain("forum.breadtopia.com"),
 domain("forum.f-droid.org"),
-domain("forum.freecodecamp.org"),
 domain("forum.gitlab.com"),
 domain("forum.glyphsapp.com"),
 domain("forum.ionicframework.com"),
@@ -56,6 +55,7 @@ domain("twittercommunity.com"),
 domain("ubuntu-mate.community"),
 domain("users.rust-lang.org"),
 domain("zegist.com"),
+url-prefix("https://www.freecodecamp.org/forum/"),
 url-prefix("https://www.sitepoint.com/community/"),
 regexp("https?://discourse\\.\\S*") {
   :root {
