--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -43,6 +43,7 @@ domain("forum.vuejs.org"),
 domain("forums.docker.com"),
 domain("forums.habitat.sh"),
 domain("forums.meteor.com"),
+domain("forums.puri.sm"),
 domain("forums.sonarr.tv"),
 domain("forums.spongepowered.org"),
 domain("forums.swift.org"),
