--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         Discourse Dark
-@version      1.0.36
+@version      1.0.37
 @description  Darken Discourse forums
 @namespace    StylishThemes
 @author       StylishThemes
@@ -406,7 +406,8 @@ domain("users.rust-lang.org") {
     background: transparent !important;
   }
 }
-@-moz-document domain("discourse.pi-hole.net"),
+@-moz-document domain("community.home-assistant.io"),
+domain("discourse.pi-hole.net"),
 domain("discourse.trueos.org"),
 domain("discuss.ocaml.org"),
 domain("forum.f-droid.org") {
